update LeetCode Biweekly Contest 149

--- a/algorithm/LeetCode/[Easy] 1752. Check if Array Is Sorted and Rotated.md
+++ b/algorithm/LeetCode/[Easy] 1752. Check if Array Is Sorted and Rotated.md
@@ -64,3 +64,67 @@ class Solution:
     def check(self, nums: List[int]) -> bool:
         return sum(a > b for a, b in zip(nums, nums[1:] + nums[:1])) <= 1
 ```
+
+**Solution2: (Sort)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 12.06 MB, Beats 5.21%
+```
+```c++
+class Solution {
+public:
+    bool check(vector<int>& nums) {
+        int n = nums.size(), i, k;
+        vector<int> a = nums;
+        bool flag;
+        sort(a.begin(), a.end());
+        a.insert(a.end(), a.begin(), a.end());
+        for (i = 0; i < n; i ++) {
+            flag = true;
+            k = 0;
+            while (k < n) {
+                if (a[i+k] != nums[k]) {
+                    flag = false;
+                    break;
+                }
+                k += 1;
+            }
+            if (flag) {
+                return true;
+            }
+        }
+        return false;
+    }
+};
+```
+
+**Solution 3: (Find Smallest Element)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 10.97 MB, Beats 98.99%
+```
+```c++
+class Solution {
+public:
+    bool check(vector<int>& nums) {
+        int n = nums.size();
+        if (n <= 1) return true;
+
+        int inversionCount = 0;
+
+        // For every pair, count the number of inversions.
+        for (int i = 1; i < n; ++i) {
+            if (nums[i] < nums[i - 1]) {
+                ++inversionCount;
+            }
+        }
+
+        // Also check between the last and the first element due to rotation
+        if (nums[0] < nums[n - 1]) {
+            ++inversionCount;
+        }
+
+        return inversionCount <= 1;
+    }
+};
+```
