--- a/algorithm/LeetCode/[Hard] 2493. Divide Nodes Into the Maximum Number of Groups.md
+++ b/algorithm/LeetCode/[Hard] 2493. Divide Nodes Into the Maximum Number of Groups.md
@@ -98,3 +98,306 @@ class Solution:
         for g in group: ans += max(bfs(x) for x in g)
         return ans 
 ```
+
+**Solution 2: (Graph Coloring + Longest Shortest Path)**
+```
+Runtime: 153 ms, Beats 51.68%
+Memory: 43.71 MB, Beats 81.51%
+```
+```c++
+class Solution {
+    // Checks if the graph is bipartite starting from the given node
+    bool isBipartite(vector<vector<int>> &adjList, int node,
+                     vector<int> &colors) {
+        for (int neighbor : adjList[node]) {
+            // If a neighbor has the same color as the current node, the graph
+            // is not bipartite
+            if (colors[neighbor] == colors[node]) return false;
+
+            // If the neighbor is already colored, skip it
+            if (colors[neighbor] != -1) continue;
+
+            // Assign the opposite color to the neighbor
+            colors[neighbor] = (colors[node] + 1) % 2;
+
+            // Recursively check bipartiteness for the neighbor; return false if
+            // it fails
+            if (!isBipartite(adjList, neighbor, colors)) return false;
+        }
+        // If all neighbors are properly colored, return true
+        return true;
+    }
+
+    // Computes the longest shortest path (height) in the graph starting from
+    // the source node
+    int getLongestShortestPath(vector<vector<int>> &adjList, int srcNode,
+                               int n) {
+        // Initialize a queue for BFS and a visited array
+        queue<int> nodesQueue;
+        vector<bool> visited(n, false);
+
+        nodesQueue.push(srcNode);
+        visited[srcNode] = true;
+        int distance = 0;
+
+        // Perform BFS layer by layer
+        while (!nodesQueue.empty()) {
+            // Process all nodes in the current layer
+            int numOfNodesInLayer = nodesQueue.size();
+            for (int i = 0; i < numOfNodesInLayer; i++) {
+                int currentNode = nodesQueue.front();
+                nodesQueue.pop();
+
+                // Visit all unvisited neighbors of the current node
+                for (int neighbor : adjList[currentNode]) {
+                    if (visited[neighbor]) continue;
+                    visited[neighbor] = true;
+                    nodesQueue.push(neighbor);
+                }
+            }
+            // Increment the distance for each layer
+            distance++;
+        }
+        // Return the total distance (longest shortest path)
+        return distance;
+    }
+
+    // Calculates the maximum number of groups for a connected component
+    int getNumberOfGroupsForComponent(vector<vector<int>> &adjList, int node,
+                                      vector<int> &distances,
+                                      vector<bool> &visited) {
+        // Start with the distance of the current node as the maximum
+        int maxNumberOfGroups = distances[node];
+        visited[node] = true;
+
+        // Recursively calculate the maximum for all unvisited neighbors
+        for (int neighbor : adjList[node]) {
+            if (visited[neighbor]) continue;
+            maxNumberOfGroups = max(maxNumberOfGroups,
+                                    getNumberOfGroupsForComponent(
+                                        adjList, neighbor, distances, visited));
+        }
+        return maxNumberOfGroups;
+    }
+public:
+    int magnificentSets(int n, vector<vector<int>>& edges) {
+        vector<vector<int>> adjList(n);
+        for (auto edge : edges) {
+            // Transition to 0-index
+            adjList[edge[0] - 1].push_back(edge[1] - 1);
+            adjList[edge[1] - 1].push_back(edge[0] - 1);
+        }
+
+        vector<int> colors(n, -1);
+        for (int node = 0; node < n; node++) {
+            if (colors[node] != -1) continue;
+            // Start coloring from uncolored nodes
+            colors[node] = 0;
+            // If the graph is not bipartite, return -1
+            if (!isBipartite(adjList, node, colors)) return -1;
+        }
+
+        // Calculate the longest shortest path for each node
+        vector<int> distances(n);
+        for (int node = 0; node < n; node++) {
+            distances[node] = getLongestShortestPath(adjList, node, n);
+        }
+
+        // Calculate the total maximum number of groups across all components
+        int maxNumberOfGroups = 0;
+        vector<bool> visited(n, false);
+        for (int node = 0; node < n; node++) {
+            if (visited[node]) continue;
+            // Add the number of groups for this component to the total
+            maxNumberOfGroups += getNumberOfGroupsForComponent(
+                adjList, node, distances, visited);
+        }
+
+        return maxNumberOfGroups;
+    }
+};
+```
+
+**Solution 3: (BFS + Union-Find)**
+```
+Runtime: 136 ms, Beats 72.27%
+Memory: 55.20 MB, Beats 44.54%
+```
+```c++
+class Solution {
+    // Find the root of the given node in the Union-Find structure
+    int find(int node, vector<int> &parent) {
+        while (parent[node] != -1) node = parent[node];
+        return node;
+    }
+
+    // Union operation to merge two sets
+    void Union(int node1, int node2, vector<int> &parent, vector<int> &depth) {
+        node1 = find(node1, parent);
+        node2 = find(node2, parent);
+
+        // If both nodes already belong to the same set, no action needed
+        if (node1 == node2) return;
+
+        // Union by rank (depth) to keep the tree balanced
+        if (depth[node1] < depth[node2]) swap(node1, node2);
+        parent[node2] = node1;
+
+        // If the depths are equal, increment the depth of the new root
+        if (depth[node1] == depth[node2]) depth[node1]++;
+    }
+
+    // Function to calculate the number of groups for a given component starting
+    // from srcNode
+    int getNumberOfGroups(vector<vector<int>> &adjList, int srcNode, int n) {
+        queue<int> nodesQueue;
+        vector<int> layerSeen(n, -1);
+        nodesQueue.push(srcNode);
+        layerSeen[srcNode] = 0;
+        int deepestLayer = 0;
+
+        // Perform BFS to calculate the number of layers (groups)
+        while (!nodesQueue.empty()) {
+            int numOfNodesInLayer = nodesQueue.size();
+            for (int i = 0; i < numOfNodesInLayer; i++) {
+                int currentNode = nodesQueue.front();
+                nodesQueue.pop();
+                for (int neighbor : adjList[currentNode]) {
+                    // If neighbor hasn't been visited, assign it to the next
+                    // layer
+                    if (layerSeen[neighbor] == -1) {
+                        layerSeen[neighbor] = deepestLayer + 1;
+                        nodesQueue.push(neighbor);
+                    } else {
+                        // If the neighbor is already in the same layer, return
+                        // -1 (invalid partition)
+                        if (layerSeen[neighbor] == deepestLayer) {
+                            return -1;
+                        }
+                    }
+                }
+            }
+            deepestLayer++;
+        }
+        return deepestLayer;
+    }
+public:
+    int magnificentSets(int n, vector<vector<int>>& edges) {
+        vector<vector<int>> adjList(n);
+        vector<int> parent(n, -1);
+        vector<int> depth(n, 0);
+
+        // Build the adjacency list and apply Union-Find for each edge
+        for (auto edge : edges) {
+            adjList[edge[0] - 1].push_back(edge[1] - 1);
+            adjList[edge[1] - 1].push_back(edge[0] - 1);
+            Union(edge[0] - 1, edge[1] - 1, parent, depth);
+        }
+
+        unordered_map<int, int> numOfGroupsForComponent;
+
+        // For each node, calculate the maximum number of groups for its
+        // component
+        for (int node = 0; node < n; node++) {
+            int numberOfGroups = getNumberOfGroups(adjList, node, n);
+            if (numberOfGroups == -1) return -1;  // If invalid split, return -1
+            int rootNode = find(node, parent);
+            numOfGroupsForComponent[rootNode] =
+                max(numOfGroupsForComponent[rootNode], numberOfGroups);
+        }
+
+        // Calculate the total number of groups across all components
+        int totalNumberOfGroups = 0;
+        for (auto [rootNode, numberOfGroups] : numOfGroupsForComponent) {
+            totalNumberOfGroups += numberOfGroups;
+        }
+        return totalNumberOfGroups;
+    }
+};
+```
+
+**Solution 4: (DFS)**
+```
+Runtime: 155 ms, Beats 49.58%
+Memory: 43.92 MB, Beats 75.21%
+```
+```c++
+class Solution {
+    bool dfs(int i, int c, vector<int> &color, vector<vector<int>> &g) {
+        color[i] = c;
+        for (auto j: g[i]) {
+            if (color[j] == -1) {
+                if (dfs(j, c^1, color, g)) {
+                    return true;
+                }
+            } else {
+                if (color[j] == color[i]) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+    int dfs2(int i, vector<vector<int>> &g) {
+        int j, sz, rst;
+        vector<bool> visited(g.size());
+        queue<int> q;
+        q.push(i);
+        visited[i] = true;
+        rst = 0;
+        while (q.size()) {
+            sz = q.size();
+            for (j = 0; j < sz; j ++) {
+                auto u = q.front();
+                q.pop();
+                for (auto v: g[u]) {
+                    if (!visited[v]) {
+                        visited[v] = true;
+                        q.push(v);
+                    }
+                }
+            }
+            rst += 1;
+        }
+        return rst;
+    }
+    void dfs3(int i, int &cur, vector<int> &dist, vector<bool> &visited, vector<vector<int>> &g) {
+        visited[i] = true;
+        cur = max(cur, dist[i]);
+        for (auto j: g[i]) {
+            if (!visited[j]) {
+                dfs3(j, cur, dist, visited, g);
+            }
+        }
+    }
+public:
+    int magnificentSets(int n, vector<vector<int>>& edges) {
+        int i, cur = 0, ans = 0;
+        vector<vector<int>> g(n+1);
+        vector<int> color(n+1, -1), dist(n+1);
+        vector<bool> visited(n+1);
+        for (auto e: edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
+        }
+        for (i = 0; i < n; i ++) {
+            if (color[i] == -1) {
+                if (dfs(i, 0, color, g)) {
+                    return -1;
+                }
+            }
+        }
+        for (i = 1; i <= n; i ++) {
+            dist[i] = dfs2(i, g);
+        }
+        for (i = 1; i <= n; i ++) {
+            if (!visited[i]) {
+                cur = 0;
+                dfs3(i, cur, dist, visited, g);
+                ans += cur;
+            }
+        }
+        return ans;
+    }
+};
+```
