--- a/algorithm/LeetCode/[Easy] 1790. Check if One String Swap Can Make Strings Equal.md
+++ b/algorithm/LeetCode/[Easy] 1790. Check if One String Swap Can Make Strings Equal.md
@@ -60,3 +60,36 @@ class Solution:
                 return False
         return S1 == S2[::-1] #whether swap is position
 ```
+
+**Solution 2: (String)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.40 MB, Beats 61.87%
+```
+```c++
+class Solution {
+public:
+    bool areAlmostEqual(string s1, string s2) {
+        int n = s1.size(), i, j, j2, k = 0;
+        for (i = 0; i < n; i ++) {
+            if (s1[i] != s2[i]) {
+                k += 1;
+                if (k == 1) {
+                    j = i;
+                } else if (k == 2) {
+                    j2 = i;
+                } else {
+                    return false;
+                }
+            }
+        }
+        if (k == 0) {
+            return true;
+        } else if (k == 1){
+            return false;
+        }
+        swap(s1[j], s1[j2]);
+        return s1 == s2;
+    }
+};
+```
