--- a/algorithm/LeetCode/[Easy] 1800. Maximum Ascending Subarray Sum.md
+++ b/algorithm/LeetCode/[Easy] 1800. Maximum Ascending Subarray Sum.md
@@ -57,3 +57,26 @@ class Solution:
             ans = max(ans, val)
         return ans
 ```
+
+**Solution 2: (Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 11.10 MB, Beats 77.09%
+```
+```c++
+class Solution {
+public:
+    int maxAscendingSum(vector<int>& nums) {
+        int n = nums.size(), i , cur = nums[0], ans = nums[0];
+        for (i = 1; i < n; i ++) {
+            if (nums[i] > nums[i-1]) {
+                cur += nums[i];
+            } else {
+                cur = nums[i];
+            }
+            ans = max(ans, cur);
+        }
+        return ans;
+    }
+};
+```
