--- a/algorithm/LeetCode/[Easy] 3105. Longest Strictly Increasing or Strictly Decreasing Subarray.md
+++ b/algorithm/LeetCode/[Easy] 3105. Longest Strictly Increasing or Strictly Decreasing Subarray.md
@@ -58,33 +58,30 @@ Hence, we return 3.
 
 # Submissions
 ---
-**Solution 1: (Greedy)**
+**Solution 1: (Greedy, DP)**
 ```
-Runtime: 56 ms
-Memory: 16.73 MB
+Runtime: 0 ms, Beats 100.00%
+Memory: 27.82 MB, Beats 64.71%
 ```
 ```c++
-class Solution:
-    def longestMonotonicSubarray(self, nums: List[int]) -> int:
-        if not nums:
-            return 0
-        
-        increasing_length = 1
-        decreasing_length = 1
-        max_length = 1
-        
-        for i in range(1, len(nums)):
-            if nums[i] > nums[i - 1]:
-                increasing_length += 1
-                decreasing_length = 1
-            elif nums[i] < nums[i - 1]:
-                decreasing_length += 1
-                increasing_length = 1
-            else:
-                increasing_length = 1
-                decreasing_length = 1
-            
-            max_length = max(max_length, increasing_length, decreasing_length)
-        
-        return max_length
+class Solution {
+public:
+    int longestMonotonicSubarray(vector<int>& nums) {
+        int n = nums.size(), i, a = 1, b = 1, ans = 1;
+        for (i = 1; i < n; i ++) {
+            if (nums[i] > nums[i-1]) {
+                a += 1;
+                b = 1;
+            } else if (nums[i] < nums[i-1]) {
+                b += 1;
+                a = 1;
+            } else {
+                a = 1;
+                b = 1;
+            }
+            ans = max({ans, a, b});
+        }
+        return ans;
+    }
+};
 ```
