--- a/algorithm/LeetCode/[Hard] 1028. Recover a Tree From Preorder Traversal.md
+++ b/algorithm/LeetCode/[Hard] 1028. Recover a Tree From Preorder Traversal.md
@@ -259,3 +259,58 @@ public:
     }
 };
 ```
+
+**Solution 5: (Greedy, stack)**
+```
+Runtime: 3 ms, Beats 62.80%
+Memory: 20.78 MB, Beats 85.56%
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    TreeNode* recoverFromPreorder(string traversal) {
+        int n = traversal.size(), i = 0, j, a, d;
+        TreeNode *cur, *pre;;
+        vector<TreeNode*> dp;
+        while (i < n) {
+            d = 0;
+            while (traversal[i+d] == '-') {
+                d += 1;
+            }
+            j = i+d;
+            a = traversal[j]-'0';
+            j += 1;
+            while (isdigit(traversal[j])) {
+                a = a*10 + traversal[j]-'0';
+                j += 1;
+            }
+            cur = new TreeNode(a);
+            while (dp.size() > d) {
+                dp.pop_back();
+            }
+            if (d) {
+                pre = dp.back();
+                if (!pre->left) {
+                    pre->left = cur;
+                } else {
+                    pre->right = cur;
+                }
+            }
+            dp.push_back(cur);
+            i = j;
+        }
+        return dp[0];
+    }
+};
+```
