--- a/algorithm/LeetCode/[Easy] 2460. Apply Operations to an Array.md
+++ b/algorithm/LeetCode/[Easy] 2460. Apply Operations to an Array.md
@@ -79,3 +79,33 @@ public:
     }
 };
 ```
+
+**Solution 3: (Simulation)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 13.23 MB, Beats 23.58%
+```
+```c++
+class Solution {
+public:
+    vector<int> applyOperations(vector<int>& nums) {
+        int n = nums.size(), i, k = 0;
+        vector<int> ans(nums.begin(), nums.end());
+        for (i = 0; i < n; i ++) {
+            if (ans[i] > 0) {
+                ans[k] = ans[i];
+                if (i < n-1 && ans[i] == ans[i+1]) {
+                    ans[k] *= 2;
+                    ans[i+1] = -1;
+                }
+                k += 1;
+            }
+        }
+        while (k < n) {
+            ans[k] = 0;
+            k += 1;
+        }
+        return ans;
+    }
+};
+```
