--- a/algorithm/LeetCode/[Easy] 2570. Merge Two 2D Arrays by Summing Values.md
+++ b/algorithm/LeetCode/[Easy] 2570. Merge Two 2D Arrays by Summing Values.md
@@ -69,3 +69,40 @@ class Solution:
         ans += nums2[j:]
         return ans
 ```
+
+**Solution 2: (Two Pointers)**
+```
+Runtime: 1 ms, Beats 45.39%
+Memory: 14.85 MB, Beats 44.73%
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> mergeArrays(vector<vector<int>>& nums1, vector<vector<int>>& nums2) {
+        int m = nums1.size(), n = nums2.size(), i = 0, j = 0;
+        vector<vector<int>> ans;
+        while (i < m && j < n) {
+            if (nums1[i][0] < nums2[j][0]) {
+                ans.push_back(nums1[i]);
+                i += 1;
+            } else if (nums1[i][0] > nums2[j][0]) {
+                ans.push_back(nums2[j]);
+                j += 1;
+            } else {
+                ans.push_back({nums1[i][0], nums1[i][1] + nums2[j][1]});
+                i += 1;
+                j += 1;
+            }
+        }
+        while (i < m) {
+            ans.push_back(nums1[i]);
+            i += 1;
+        }
+        while (j < n) {
+            ans.push_back(nums2[j]);
+            j += 1;
+        }
+        return ans;
+    }
+};
+```
