--- a/algorithm/LeetCode/[Hard] 1092. Shortest Common Supersequence.md
+++ b/algorithm/LeetCode/[Hard] 1092. Shortest Common Supersequence.md
@@ -134,3 +134,90 @@ public:
     }
 };
 ```
+
+**Solution 3: (DP Bottom-Up)**
+
+    dp[i][j]
+    = 1 + dp[i-1][j-1] if a[i] == b[j]
+    = 1 + min(dp[i-1][j], dp[i][j-1])
+
+      c a b
+    0 1 2 3
+a   1 2 2 3
+b   2 3 3 3
+a   3 4 4 4
+c   4 4 5 5
+
+        c a b a c
+                ^
+
+      a a a a a a a a
+    0 1 2 3 4 5 6 7 8
+a   1 1
+a   2   2
+a   3     3
+a   4       4
+a   5         5
+a   6            6
+a   7              7
+a   8                8
+
+        x x x
+    x   1
+    x     2
+    x       3
+    x       4
+    x       5     
+
+```
+Runtime: 19 ms, Beats 95.84%
+Memory: 31.08 MB, Beats 8.06%
+```
+```c++
+class Solution {
+public:
+    string shortestCommonSupersequence(string str1, string str2) {
+        int m = str1.size(), n = str2.size(), i, j;
+        vector<vector<int>> dp(m+1, vector<int>(n+1, (int)1e7));
+        dp[0][0] = 0;
+        for (i = 0; i < m; i ++) {
+            dp[i+1][0] = i+1;
+        }
+        for (j = 0; j < n; j ++) {
+            dp[0][j+1] = j+1;
+        }
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                if (str1[i] == str2[j]) {
+                    dp[i+1][j+1] = min(dp[i+1][j+1], 1 + dp[i][j]);
+                } else {
+                    dp[i+1][j+1] = min(dp[i+1][j+1], 1 + min(dp[i+1][j], dp[i][j+1]));
+                }
+            }
+        }
+        string ans;
+        i = m;
+        j = n;
+        while (i && j) {
+            if (str1[i-1] == str2[j-1]) {
+                ans = str1[i-1] + ans;
+                i -= 1;
+                j -= 1;
+            } else if (dp[i][j] == dp[i-1][j] + 1) {
+                ans = str1[i-1] + ans;
+                i -= 1;
+            } else {
+                ans = str2[j-1] + ans;
+                j -= 1;
+            }
+        }
+        if (i) {
+            ans = str1.substr(0, i) + ans;
+        }
+        if (j) {
+            ans = str2.substr(0, j) + ans;
+        }
+        return ans;
+    }
+};
+```
