update LeetCode Weekly Contest 440

--- a/algorithm/LeetCode/[Easy] 2379. Minimum Recolors to Get K Consecutive Black Blocks.md
+++ b/algorithm/LeetCode/[Easy] 2379. Minimum Recolors to Get K Consecutive Black Blocks.md
@@ -74,3 +74,25 @@ public:
     }
 };
 ```
+
+**Solution 3: (Sliding Window)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 8.45 MB, Beats 31.01%
+```
+```c++
+class Solution {
+public:
+    int minimumRecolors(string blocks, int k) {
+        int n = blocks.size(), i, cur = 0, ans = 100;
+        for (i = 0; i < n; i ++) {
+            cur += (blocks[i] == 'W');
+            if (i >= k-1) {
+                ans = min(ans, cur);
+                cur -= blocks[i-k+1] == 'W';
+            }
+        }
+        return ans;
+    }
+};
+```
