--- a/algorithm/LeetCode/[Easy] 2965. Find Missing and Repeated Values.md
+++ b/algorithm/LeetCode/[Easy] 2965. Find Missing and Repeated Values.md
@@ -57,3 +57,69 @@ public:
     }
 };
 ```
+
+**Solution 2: (Array)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 26.74 MB, Beats 77.75%
+```
+```c++
+class Solution {
+public:
+    vector<int> findMissingAndRepeatedValues(vector<vector<int>>& grid) {
+        int n = grid.size(), i, j, cur = 0;
+        vector<int> visited(n*n+1);
+        bool flag = false;
+        vector<int> ans(2);
+        for (i = 0; i < n; i ++) {
+            for (j = 0; j < n; j ++) {
+                cur += grid[i][j];
+                if (visited[grid[i][j]]) {
+                    ans[0] = grid[i][j];
+                }
+                visited[grid[i][j]] = 1;
+            }
+        }
+        ans[1] = (1 + (n*n))*(n*n)/2 - cur + ans[0];
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Math)**
+```
+Runtime: 3 ms, Beats 77.46%
+Memory: 25.41 MB, Beats 97.94%
+```
+```c++
+class Solution {
+public:
+    vector<int> findMissingAndRepeatedValues(vector<vector<int>>& grid) {
+        long long sum = 0, sqrSum = 0;
+        long long n = grid.size();
+        long long total = n * n;
+
+        // Calculate actual sum and squared sum from grid
+        for (int row = 0; row < n; ++row) {
+            for (int col = 0; col < n; ++col) {
+                sum += grid[row][col];
+                sqrSum +=
+                    static_cast<long long>(grid[row][col]) * grid[row][col];
+            }
+        }
+
+        // Calculate differences from expected sums
+        // Expected sum: n(n+1)/2, Expected square sum: n(n+1)(2n+1)/6
+        long long sumDiff = sum - total * (total + 1) / 2;
+        long long sqrDiff = sqrSum - total * (total + 1) * (2 * total + 1) / 6;
+
+        // Using math: If x is repeated and y is missing
+        // sumDiff = x - y
+        // sqrDiff = x² - y²
+        int repeat = (sqrDiff / sumDiff + sumDiff) / 2;
+        int missing = (sqrDiff / sumDiff - sumDiff) / 2;
+
+        return {repeat, missing};
+    }
+};
+```
