--- a/algorithm/LeetCode/[Hard] 2523. Closest Prime Numbers in Range.md
+++ b/algorithm/LeetCode/[Hard] 2523. Closest Prime Numbers in Range.md
@@ -64,3 +64,82 @@ class Solution:
                 primes.pop(0)
         return ans
 ```
+
+**Solution 2: (Sieve of Eratosthenes, DP, O(Rlog(log(R)) + R−L))**
+```
+Runtime: 134 ms, Beats 77.04%
+Memory: 158.87 MB, Beats 16.67%
+```
+```c++
+class Solution {
+public:
+    vector<int> closestPrimes(int left, int right) {
+        int i, k, pre = INT_MAX;
+        vector<int> dp(right+1), ans;
+        dp[1] = 1;
+        for (k = 2; k <= sqrt(right); k ++) {
+            if (dp[k] == 0) {
+                for (i = 2*k; i <= right; i += k) {
+                    dp[i] = 1;
+                }
+            }
+        }
+        for (i = right; i >= left; i--) {
+            if (dp[i] == 0) {
+                if (pre != INT_MAX) {
+                    if (ans.size() == 0 || ans[1]-ans[0] >= pre - i) {
+                        ans = {i, pre};
+                    }
+                }
+                pre = i;
+            }
+        }
+        if (ans.size() == 0) {
+            ans = {-1, -1};
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Analyze Distance between twin primes, O(min(1452,R−L)⋅sqrt(R)))**
+‵``
+Runtime: 0 ms, Beats 100.00%
+Memory: 7.94 MB, Beats 99.63%
+```
+```c++
+class Solution {
+public:
+    vector<int> closestPrimes(int left, int right) {
+        int i, k, pre = INT_MAX;
+        bool flag;
+        vector<int> ans;
+        for (i = max(left, 2); i <= right; i++) {
+            flag = false;
+            for (k = 2; k <= sqrt(i); k ++) {
+                if (i%k == 0) {
+                    flag = true;
+                    break;
+                }
+            }
+            if (flag) {
+                continue;
+            }
+            if (pre != INT_MAX) {
+                if (i <= pre + 2) {
+                    return {pre, i};
+                } else if (ans.size() == 0) {
+                    ans = {pre, i};
+                } else if (ans[1]-ans[0] > i - pre) {
+                    ans = {pre, i};
+                }
+            }
+            pre = i;
+        }
+        if (ans.size() == 0) {
+            ans = {-1, -1};
+        }
+        return ans;
+    }
+};
+```
