update LeetCode Biweekly Contest 152

--- a/algorithm/LeetCode/[Easy] 2529. Maximum Count of Positive Integer and Negative Integer.md
+++ b/algorithm/LeetCode/[Easy] 2529. Maximum Count of Positive Integer and Negative Integer.md
@@ -44,29 +44,97 @@ Memory: 14.1 MB
 ```
 ```python
 
-Close
-FC Su
-FC Su
-Jan 08, 2023 10:35
-
-Details
-Solution
-Python3
-Runtime
-116 ms
-Beats
-100%
-Memory
-14.1 MB
-Beats
-75%
-Click to check the distribution chart
-Notes
-Write your notes here
-Related Tags
-Select tags
-0/5
 class Solution:
     def maximumCount(self, nums: List[int]) -> int:
         return max(bisect.bisect_left(nums, 0), len(nums)-bisect.bisect_right(nums, 0))
+```
+
+**Solution 2: (Binary Search)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 21.50 MB, Beats 10.71%
+```
+```c++
+class Solution {
+public:
+    int maximumCount(vector<int>& nums) {
+        int n = nums.size();
+        int a = lower_bound(nums.begin(), nums.end(), 0) - nums.begin();
+        int b = (upper_bound(nums.begin(), nums.end(), 0) - nums.begin());
+        return max(a, n - b);
+    }
+};
+```
+
+**Solution 3: (Binary Search)**
+
+lower bound: < 0 -> false
+lower bound 2: <= 0 -> false;
+lower:
+    -2,-1,-1,1,2,3
+    l^          r^
+            l^  r^
+            l^r^
+           lr^
+lower 2:
+    -2,-1,-1,1,2,3
+    l^          r^
+            l^  r^
+            l^^r
+           lr^
+
+lower:    
+    -3,-2,-1,0,0,1,2
+    l^            r^
+    l^      r^
+          l^r^
+           lr^
+              
+lower 2:
+    -3,-2,-1,0,0,1,2
+    l^            r^
+              l^  r^
+                l^r^
+               lr^
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 21.43 MB, Beats 43.55%
+```
+```c++
+class Solution {
+    int lower_bound(vector<int> &nums) {
+        int n = nums.size(), left = 0, right = n-1, mid, rst = n;
+        while (left <= right) {
+            mid = left + (right-left)/2;
+            if (nums[mid] < 0) {
+                left = mid + 1;
+            } else {
+                rst = mid;
+                right = mid - 1;
+            }
+        }
+        return rst;
+    }
+    int lower_bound2(vector<int> &nums) {
+        int n = nums.size(), left = 0, right = n-1, mid, rst = n;
+        while (left <= right) {
+            mid = left + (right-left)/2;
+            if (nums[mid] <= 0) {
+                left = mid + 1;
+            } else {
+                rst = mid;
+                right = mid - 1;
+            }
+        }
+        return rst;
+    }
+public:
+    int maximumCount(vector<int>& nums) {
+        int n = nums.size(), a, b;
+        a = lower_bound(nums);
+        b = lower_bound2(nums);
+        return max(a, n - b);
+    }
+};
 ```
