update LeetCode Weekly Contest 441

--- a/algorithm/LeetCode/[Easy] 2206. Divide Array Into Equal Pairs.md
+++ b/algorithm/LeetCode/[Easy] 2206. Divide Array Into Equal Pairs.md
@@ -49,17 +49,23 @@ class Solution:
 
 **Solution 2: (Brute Force)**
 ```
-Runtime: 12 ms
-Memory Usage: 13.1 MB
+Runtime=: 0 ms, Beats 100.00%
+Memory: 17.28 MB, Beats 63.47%
 ```
 ```c++
 class Solution {
 public:
     bool divideArray(vector<int>& nums) {
-        int cnt[501] = {};
-        for (int n : nums)
-            ++cnt[n];
-        return all_of(begin(cnt), end(cnt), [](int cnt){ return cnt % 2 == 0; });
+        int cnt[501] = {0};
+        for (auto a: nums) {
+            cnt[a] += 1;
+        }
+        for (int a = 1; a <= 500; a ++) {
+            if (cnt[a]%2) {
+                return false;
+            }
+        }
+        return true;
     }
 };
 ```
