update LeetCode Weekly Contest 442

--- a/algorithm/LeetCode/[Hard] 3108. Minimum Cost Walk in Weighted Graph.md
+++ b/algorithm/LeetCode/[Hard] 3108. Minimum Cost Walk in Weighted Graph.md
@@ -94,3 +94,167 @@ public:
     }
 };
 ```
+
+**Solution 2: (Union Find)**
+
+    n = 5, edges = [[0,1,7],[1,3,7],[1,2,1]], query = [[0,3],[3,4]]
+                                        ^                ^
+
+      7   7
+    0 - 1 - 3   4
+        | 1
+        2
+
+
+                v
+p   0  1  2  3  4
+    1  
+             1
+          1
+r   0  0  0  0  0
+       1
+
+dp -1 -1 -1 -1 -1
+       7
+       1
+       
+       [[1,0,4],[0,2,5],[0,2,3],[0,2,14],[0,2,12],[2,0,14],[0,2,4]], [[2,1]]
+                                                                         ^
+       1 - 0 - 2
+         4   5
+             3
+            14
+            12
+            14
+             4
+
+p       0  1  2
+        1
+              1
+
+r       0  0  0
+           1
+
+dp     -1 -1 -1
+           4
+           0
+           0
+           0
+           0
+           0
+           0
+
+```
+Runtime: 155 ms, Beats 32.47%
+Memory: 238.60 MB, Beats 35.06%
+```
+```c++
+class Solution {
+    vector<int> p, r, dp;
+    int find(int x) {
+        if (p[x] != x) {
+            p[x] = find(p[x]);
+        }
+        return p[x];
+    }
+    bool uni(int x, int y) {
+        int xr = find(x), yr = find(y);
+        if (xr == yr) {
+            return true;
+        }
+        if (r[xr] < r[yr]) {
+            p[xr] = yr;
+        } else if (r[xr] > r[yr]) {
+            p[yr] = xr;
+        } else {
+            p[xr] = yr;
+            r[yr] += 1;
+        }
+        return false;
+    }
+public:
+    vector<int> minimumCost(int n, vector<vector<int>>& edges, vector<vector<int>>& query) {
+        int u, v, w, ur;
+        p.resize(n);
+        r.resize(n);
+        dp.resize(n, INT_MAX);
+        for (v = 0; v < n; v ++) {
+            p[v] = v;
+        }
+        for (auto e: edges) {
+            u = e[0];
+            v = e[1];
+            uni(u, v);
+        }
+        for (auto e: edges) {
+            u = e[0];
+            v = e[1];
+            w = e[2];
+            ur = find(u);
+            find(v);
+            dp[ur] &= w; 
+        }
+        vector<int> ans;
+        for (auto q: query) {
+            u = q[0];
+            v = q[1];
+            if (p[u] == p[v]) {
+                ans.push_back(dp[p[v]]);
+            } else {
+                ans.push_back(-1);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (DFS)**
+```
+Runtime: 203 ms, Beats 18.83%
+Memory: 268.61 MB, Beats 16.88%
+```
+```c++
+class Solution {
+    void dfs(int u, int c, vector<int> &p, vector<int> &dp, vector<vector<pair<int,int>>> &g) {
+        p[u] = c;
+        for (auto [v, w]: g[u]) {
+            dp[c] &= w;
+            if (p[v] == -1) {
+                dfs(v, c, p, dp, g);
+            }
+        }
+    }
+public:
+    vector<int> minimumCost(int n, vector<vector<int>>& edges, vector<vector<int>>& query) {
+        int u, v, w, cur;
+        vector<vector<pair<int,int>>> g(n);
+        vector<int> p(n, -1), dp, ans;
+        for (auto e: edges) {
+            u = e[0];
+            v = e[1];
+            w = e[2];
+            g[u].push_back({v, w});
+            g[v].push_back({u, w});
+        }
+        cur = 0;
+        for (u = 0; u < n; u ++) {
+            if (p[u] == -1) {
+                dp.push_back(INT_MAX);
+                dfs(u, cur, p, dp, g);
+                cur += 1;
+            }
+        }
+        for (auto q: query) {
+            u = q[0];
+            v = q[1];
+            if (p[u] == p[v]) {
+                ans.push_back(dp[p[v]]);
+            } else {
+                ans.push_back(-1);
+            }
+        }
+        return ans;
+    }
+};
+```
