--- a/algorithm/LeetCode/[Hard] 3486. Longest Special Path II.md
+++ b/algorithm/LeetCode/[Hard] 3486. Longest Special Path II.md
@@ -39,7 +39,7 @@ The longest path is 0 -> 3 consisting of 2 nodes with a length of 5.
 
 **Constraints:**
 
-* `2 <= n <= 5 * 104`
+* `2 <= n <= 5 * 10^4`
 * `edges.length == n - 1`
 * `edges[i].length == 3`
 * `0 <= ui, vi < n`
@@ -50,60 +50,77 @@ The longest path is 0 -> 3 consisting of 2 nodes with a length of 5.
 
 # Submissions
 ---
-**Solution 1: (Sliding Window in tree)**
+**Solution 1: (Sliding Window, dfs, sliding window over depth)**
+
+                0 (1)
+                |1
+                1(1)
+             3/   \1
+             2(0)   3(3)
+            6|    2/ \5
+             4(1) 5(2) 6(1)
+            2|        |3
+             7 (1)     8 (0)
+
+trace  [1  1  5]
+        ^top  ^down
+        ^twice
+           ^prev 
+
 ```
-Runtime: 2325 ms, Beats 5.88%
-Memory: 281.22 MB, Beats 58.82%
+Runtime: 1882 ms, Beats 28.95%
+Memory: 358.10 MB, Beats 24.85%
 ```
 ```c++
 class Solution {
-    int valueCount[50001];
-    vector<int>path,pathLengths;
-    int maxLength,minNodes;
-    void dfs(int node, int parent, int pathPointer, int pathLength, int nodes,int duplicates, vector<vector<pair<int,int>>> &g, vector<int>& nums) 
-    {
-        path.push_back(nums[node]);
-        valueCount[nums[node]]++;
-        if(valueCount[nums[node]]>1)
-           duplicates++;    
-        nodes++;   
-        int oldPointer=pathPointer;
-        while(duplicates>1) {
-            nodes--;
-            pathLength-=pathLengths[pathPointer];
-            valueCount[path[pathPointer]]--;
-            if(valueCount[path[pathPointer]]>=1)
-                duplicates--;
-            pathPointer++;    
-        }   
-        if(pathLength>maxLength || (pathLength==maxLength && minNodes>nodes)) {
-            minNodes=nodes;
-            maxLength=pathLength;
+    // For output
+    int longSpecial = 0;
+    int minCount = 1;
+    // For internal data
+    int n;
+    vector<vector<pair<int, int>>> adj; // node, length
+    vector<int> trace;
+    void DFS(int node, int parent, int top, int down, int sum, vector<int> &path, vector<int>& nums, int twice){
+        int prev = trace[nums[node]];
+        trace[nums[node]] = down;
+        // 1. Update sliding window 
+        while(top <= min(prev, twice)){ 
+            sum -= path[top++];
         }
-        for(auto &next:g[node]) {
-            if(next.first==parent)
-               continue;
-            pathLengths.push_back(next.second);  
-            dfs(next.first,node,pathPointer,pathLength+next.second,nodes,duplicates,g,nums); 
-            pathLengths.pop_back();  
+        if(prev != -1){ 
+            twice = max(twice, prev); // update twice 
         }
-        path.pop_back();
-        valueCount[nums[node]]--;
-        while(oldPointer<pathPointer)
-           valueCount[path[oldPointer++]]++;
+
+        // 2. Update the output if length is greater
+        if(sum > longSpecial){
+            longSpecial = sum;
+            minCount = down - top + 1;
+        } else if(sum == longSpecial){
+            minCount = min(minCount, down - top + 1);
+        }
+
+        // 3. Go to next stage
+        for(auto &next:adj[node]){ 
+            if(next.first != parent){
+                path.push_back(next.second);
+                DFS(next.first, node, top, down+1, sum+next.second, path, nums, twice);
+                path.pop_back();
+            }
+        }
+        trace[nums[node]] = prev;
     }
 public:
     vector<int> longestSpecialPath(vector<vector<int>>& edges, vector<int>& nums) {
-        int n=nums.size();
-        maxLength=0,minNodes=0;
-        memset(valueCount, 0, sizeof(valueCount));
-        vector<vector<pair<int,int>>>g(n);
-        for(auto &edge:edges) {
-            g[edge[0]].push_back({edge[1], edge[2]});
-            g[edge[1]].push_back({edge[0], edge[2]});
+        n = edges.size()+1;
+        adj.resize(n);
+        trace.resize(50001, -1);
+        for(auto &e:edges){
+            adj[e[0]].emplace_back(e[1], e[2]);
+            adj[e[1]].emplace_back(e[0], e[2]);
         }
-        dfs(0,-1,0,0,0,0,g,nums);
-        return {maxLength, minNodes};
+        vector<int> path;
+        DFS(0, -1, 0, 0, 0, path, nums, -1);
+        return {longSpecial, minCount};
     }
 };
 ```
