--- a/algorithm/LeetCode/[Hard] 3485. Longest Common Prefix of K Strings After Removal.md
+++ b/algorithm/LeetCode/[Hard] 3485. Longest Common Prefix of K Strings After Removal.md
@@ -48,146 +48,70 @@ Removing any index results in an answer of 0.
 
 # Submissions
 ---
-**Solution 1: (Trie, Set)**
+**Solution 1: (Trie, Counter)**
 ```
-Runtime: 760 ms, Beats 5.36%
-Memory: 347.54 MB, Beats 5.36%
+Runtime: 677 ms, Beats 45.29%
+Memory: 383.68 MB, Beats 38.54%
 ```
 ```c++
-#define ll long long 
-
-map<ll, ll> m;
-set<ll, greater<ll>> st;
-
-struct Node 
-{
-    Node *links[26];
-    bool flag = false;
-    
-    int cnt = 0; // frequency variable. 
-
-    bool containKey(char ch) 
-    {
-        return (links[ch - 'a'] != NULL);
-    }
-
-    void put(char ch, Node *node) 
-    {
-        links[ch - 'a'] = node;
-    }
-
-    Node *get(char ch) 
-    {
-        return links[ch - 'a'];
-    }
-
-    void setEnd() 
-    {
-        flag = true;
-    }
-
-    bool isEnd() 
-    {
-        return flag;
-    }
-};
-
-
-
-class Trie 
-{
-public:
-    Node* root;
-
-    Trie() 
-    {
-        root = new Node();
-    }
-
-    void insert(string &word, int k) 
-    {
-
-        Node *node = root;
-        
-        
-        for (int i = 0; i < word.size(); i++) 
-        {
-            if (!node->containKey(word[i])) 
-            {
-                node->put(word[i], new Node());
-            }
-
-            node = node->get(word[i]);
-            node->cnt ++;
-            
-            if(node->cnt >= k)
-            {
-                m[i+1]++;
-                
-                if(m[i+1] == 1) // add to the set when new length with frequency over k is found.
-                    st.insert(i+1);
-            }
-        }
-        
-        node->setEnd();
-    }
-
-    void erase(string &word, int k) 
-    {
-        Node *node = root;
-        
-        for (int i = 0; i < word.size(); i++) 
-        {
-            if (!node->containKey(word[i])) 
-            {
-                node->put(word[i], new Node());
-            }
-
-            node = node->get(word[i]);
-            node->cnt --;
-            
-            if(node->cnt == k-1)
-            {
-                m[i+1]--;
-                
-                if(m[i+1] == 0)  // remove from the set when the frequency in the map becomes 0. 
-                    st.erase(i+1);
-            }
-        }
-        
-        node->setEnd();
-    }
-};
-
 class Solution {
+    struct TrieNode {
+        TrieNode *child[26] = {nullptr};
+        int num = 0;
+    };
+
+    TrieNode *root;
+    map<int, int> cnt;
+
+    void add(string s, int k) {
+        TrieNode *node = root;
+        string cur;
+        for (auto c: s) {
+            cur += c;
+            if (!node->child[c-'a']) {
+                node->child[c-'a'] = new TrieNode();
+            }
+            node = node->child[c-'a'];
+            node->num += 1;
+            if (node->num == k) {
+                cnt[cur.length()] += 1;
+            }
+        }
+    }
+
+    void erase(string s, int k) {
+        TrieNode *node = root;
+        string cur;
+        for (auto c: s) {
+            cur += c;
+            node = node->child[c-'a'];
+            node->num -= 1;
+            if (node->num == k-1) {
+                cnt[cur.length()] -= 1;
+                if (cnt[cur.length()] == 0) {
+                    cnt.erase(cur.length());
+                }
+            }
+        }
+    }
+
 public:
     vector<int> longestCommonPrefix(vector<string>& words, int k) {
-        m.clear();
-        st.clear();
-
-        Trie* tr = new Trie;
-        vector<int> res;
-        
-        for(ll i=0; i<words.size(); ++i)
-            tr->insert(words[i], k);
-        
-        for(ll i=0; i<words.size(); ++i)
-        {
-            tr->erase(words[i], k);
-            
-            if(st.size() == 0) // when set is empty there is no prefix with frequency greater than or equal to k. 
-                res.push_back(0);
-
-            else
-            {
-                ll now = *st.begin(); // largest value in the set. 
-                res.push_back(now);
-            }
-            
-            tr->insert(words[i], k);
+        root = new TrieNode();
+        for (auto word: words) {
+            add(word, k);
         }
-    
-        return res;
+        vector<int> ans;
+        for (auto word: words) {
+            erase(word, k);
+            if (cnt.size()) {
+                ans.push_back(cnt.rbegin()->first);
+            } else {
+                ans.push_back(0);
+            }
+            add(word, k);
+        }
+        return ans;
     }
 };
 ```
