update LeetCode Biweekly Contest 153

--- a/algorithm/LeetCode/[Hard] 2503. Maximum Number of Points From Grid Queries.md
+++ b/algorithm/LeetCode/[Hard] 2503. Maximum Number of Points From Grid Queries.md
@@ -75,3 +75,46 @@ class Solution:
             ans += [dp[i][1]]
         return ans
 ```
+
+**Solution 2: (Sort, Heap)**
+```
+Runtime: 107 ms, Beats 51.81%
+Memory: 43.29 MB, Beats 47.10%
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+public:
+    vector<int> maxPoints(vector<vector<int>>& grid, vector<int>& queries) {
+        int m = grid.size(), n = grid[0].size(), k = queries.size(), i, d, ni, nj, nk;
+        priority_queue<tuple<int,int,int>, vector<tuple<int,int,int>>, greater<>> pq;
+        vector<vector<int>> visited(m, vector<int>(n));
+        vector<pair<int,int>> dp;
+        vector<int> ans(k);
+        for (i = 0; i < k; i ++) {
+            dp.push_back({queries[i], i});
+        }
+        sort(dp.begin(), dp.end());
+        nk = 0;
+        visited[0][0] = 1;
+        pq.push({grid[0][0], 0, 0});
+        for (auto [q, i]: dp) {
+            while (pq.size() && get<0>(pq.top()) < q) {
+                auto [v, i, j] = pq.top();
+                pq.pop();
+                nk += 1;
+                for (d = 0; d < 4; d ++) {
+                    ni = i + dd[d];
+                    nj = j + dd[d+1];
+                    if (0 <= ni && ni < m && 0 <= nj && nj < n && !visited[ni][nj]) {
+                        pq.push({grid[ni][nj], ni, nj});
+                        visited[ni][nj] = 1;
+                    }
+                }
+            }
+            ans[i] = nk;
+        }
+        return ans;
+    }
+};
+```
