--- a/algorithm/LeetCode/[Hard] 2818. Apply Operations to Maximize Score.md
+++ b/algorithm/LeetCode/[Hard] 2818. Apply Operations to Maximize Score.md
@@ -133,3 +133,181 @@ public:
     }
 };
 ```
+
+**Solution 2: (Mono dec Stack, Heap, Math, Time: (n * (sqrt(n) + log(n))))**
+
+    nums = [19, 12, 14,  6, 10, 18], k = 3
+             0   2   2   2   2   2
+                                 ^
+    stk     [{1,2} {2,2} {3,2} {4,2}]
+    left    -1  -1   1   2   3   4
+    right    1   6   6   6   6   6
+          >      <
+          >                          <
+                 >                   <   
+                     >               <
+                         >           <
+                             >       <
+             ^
+                                 ^
+                     ^
+ans    1 *  19 *    14          * 18
+
+```
+Runtime: 349, ms Beats 56.10%
+Memory: 171.57 MB, Beats 54.27%
+```
+```c++
+class Solution {
+    int MOD = 1e9 + 7;
+    long long power(long long base, long long exponent) {
+        long long res = 1;
+        while (exponent > 0) {
+            if (exponent % 2 == 1) {
+                res = ((res * base) % MOD);
+            }
+            base = (base * base) % MOD;
+            exponent /= 2;
+        }
+
+        return res;
+    }
+public:
+    int maximumScore(vector<int>& nums, int k) {
+        int n = nums.size(), i, cur, a, j;
+        long long b, ans = 1;
+        vector<int> dp(n);
+        vector<long long> dp2(n), left(n, -1), right(n, n);
+        stack<int> stk;
+        priority_queue<pair<long long,int>> pq;
+        for (i = 0; i < n; i ++) {
+            cur = nums[i];
+            for (a = 2; a <= sqrt(cur); a ++) {
+                if (cur%a == 0) {
+                    dp[i] += 1;
+                    while (cur%a == 0) {
+                        cur /= a;
+                    }
+                }
+            }
+            if (cur >= 2) {
+                dp[i] += 1;
+            }
+        }
+        for (i = 0; i < n; i ++) {
+            while (stk.size() && dp[stk.top()] < dp[i]) {
+                j = stk.top();
+                stk.pop();
+                right[j] = i;
+            }
+            if (stk.size()) {
+                left[i] = stk.top();
+            }
+            stk.push(i);
+        }
+        for (i = 0; i < n; i ++) {
+            dp2[i] = (i - left[i]) * (right[i] - i);
+        }
+        for (i = 0; i < n; i ++) {
+            pq.push({nums[i], i});
+        }
+        while (k) {
+            auto [a, i] = pq.top();
+            pq.pop();
+            b = min((long long)k, dp2[i]);
+            ans = (ans * power(a, b)) % MOD;
+            k -= b;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Mono dec Stack, Heap, Math (Sieve of Eratosthenes), Time: O(n × (logm + logn) + mloglogm)**
+```
+Runtime: 413 ms, Beats 39.63%
+Memory: 311.75 MB, Beats 10.36%
+```
+```c++
+class Solution {
+    int MOD = 1e9 + 7;
+    long long power(long long base, long long exponent) {
+        long long res = 1;
+        while (exponent > 0) {
+            if (exponent % 2 == 1) {
+                res = ((res * base) % MOD);
+            }
+            base = (base * base) % MOD;
+            exponent /= 2;
+        }
+
+        return res;
+    }
+
+    // O(m log log m)
+    vector<int> get_prime(int num) {
+        int a, b;
+        vector<int> dp(num+1), rst;
+        for (a = 2; a <= num; a ++) {
+            if (dp[a] == 0) {
+                rst.push_back(a);
+                for (b = 2*a; b <= num; b += a) {
+                    dp[b] = 1;
+                }
+            }
+            
+        }
+        return rst;
+    }
+public:
+    int maximumScore(vector<int>& nums, int k) {
+        int n = nums.size(), i, cur, a, j;
+        long long b, ans = 1;
+        vector<int> prime, dp(n);
+        vector<long long> dp2(n), left(n, -1), right(n, n);
+        stack<int> stk;
+        priority_queue<pair<long long,int>> pq;
+        prime = get_prime(*max_element(nums.begin(), nums.end()));
+        for (i = 0; i < n; i ++) {
+            cur = nums[i];
+            for (j = 0; j < prime.size(); j ++) {
+                if (prime[j]*prime[j] > cur) {
+                    break;
+                }
+                if (nums[i]%prime[j] == 0) {
+                    dp[i] += 1;
+                    while (cur % prime[j] == 0) {
+                        cur /= prime[j];
+                    }
+                }
+            }
+            dp[i] += cur >= 2;
+        }
+        for (i = 0; i < n; i ++) {
+            while (stk.size() && dp[stk.top()] < dp[i]) {
+                j = stk.top();
+                stk.pop();
+                right[j] = i;
+            }
+            if (stk.size()) {
+                left[i] = stk.top();
+            }
+            stk.push(i);
+        }
+        for (i = 0; i < n; i ++) {
+            dp2[i] = (i - left[i]) * (right[i] - i);
+        }
+        for (i = 0; i < n; i ++) {
+            pq.push({nums[i], i});
+        }
+        while (k) {
+            auto [a, i] = pq.top();
+            pq.pop();
+            b = min((long long)k, dp2[i]);
+            ans = (ans * power(a, b)) % MOD;
+            k -= b;
+        }
+        return ans;
+    }
+};
+```
