--- a/algorithm/LeetCode/[Hard] 2551. Put Marbles in Bags.md
+++ b/algorithm/LeetCode/[Hard] 2551. Put Marbles in Bags.md
@@ -112,3 +112,45 @@ public:
     }
 };
 ```
+
+**Solution 3: (Sort)**
+
+    1  3  5  1
+    ^  ^^^^^^^
+    ^^^^  ^^^^
+
+       4   6   8
+       ^
+min 2  6
+max 2          10
+    
+        1  3
+min 4   4
+max 4
+
+```
+Runtime: 44 ms, Beats 26.58%
+Memory: 67.59 MB, Beats 44.30%
+```
+```c++
+class Solution {
+public:
+    long long putMarbles(vector<int>& weights, int k) {
+        int n = weights.size(), i, ck;
+        long long ans = 0;
+        vector<int> dp;
+        for (i = 0; i < n-1; i ++) {
+            dp.push_back(weights[i] + weights[i+1]);
+        }
+        sort(dp.begin(), dp.end());
+        ck = k-1;
+        i = 0;
+        while (ck) {
+            ans += dp[n-2-i] - dp[i];
+            i += 1;
+            ck -= 1;
+        }
+        return ans;
+    }
+};
+```
