--- a/algorithm/LeetCode/[Hard] 3490. Count Beautiful Numbers.md
+++ b/algorithm/LeetCode/[Hard] 3490. Count Beautiful Numbers.md
@@ -35,7 +35,7 @@ The beautiful numbers in the range are 1, 2, 3, 4, 5, 6, 7, 8, 9, and 10.
 
 # Submissions
 ---
-**Solution 1: (DP Top-Down)**
+**Solution 1: (Digit DP, DP Top-Down)**
 ```
 Runtime: 1518 ms, Beats 30.77%
 Memory: 83.64 MB, Beats 46.15%
