update LeetCode Weekly Contest 444

--- a/algorithm/LeetCode/[Easy] 2873. Maximum Value of an Ordered Triplet I.md
+++ b/algorithm/LeetCode/[Easy] 2873. Maximum Value of an Ordered Triplet I.md
@@ -53,3 +53,37 @@ class Solution:
             maxa = max(maxa, a)
         return res
 ```
+
+**Solution 2: (One Pass)**
+
+    12,  6,  1,  2,  7
+                 ^
+pre 12  12  12      
+mxd     6   11  111
+             6  22
+
+     1,  10,   3,   4,  19
+pre  1   10   10
+mxd       0    7    7
+               0   28   133
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 21.60 MB, Beats 88.55%
+```
+```c++
+class Solution {
+public:
+    long long maximumTripletValue(vector<int>& nums) {
+        int n = nums.size(), i, pre = 0, mxd = 0;
+        long long ans = 0;
+        mxd = max(0, nums[0]-nums[1]);
+        for (i = 2; i < n; i ++) {
+            pre = max(pre, nums[i-2]);
+            mxd = max(mxd, pre - nums[i-1]);
+            ans = max(ans, (long long)nums[i]*mxd);
+        }
+        return ans;
+    }
+};
+```
